		Finance: fixed background repeat issue in Show/Hide button in fee blocks
		Formal Assessment: added All Students filter persistence to pagination links
		Individual Needs: added template settings for pre-filling fields on new IEPs
		Individual Needs: fixed permission issue on summary page
		Library: reduced memory usage of Library browse page
		Markbook: added settings to enable/disable Effort and Rubrics
		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups
		Markbook: removed Learning Area rubrics from multiple column add
		Markbook: fixed return and presetting of fields when landing on add page from Planner
		Markbook: made target scale selectable (so not constained to Default Assessment Scale)
		Markbook: fixed issue preventing some staff from seeing Markbook columns from other classes (depending on Edit rights)
		Markbook: added a class chooser to the sidebar for view, edit and weightings sub-pages
		Markbook: fixed multibyte substring issue when shortening comments for preview
		Messenger: fixed formatting of Sent From Gibbon tag
		Messenger: fixed display of email/SMS report for recipients with , in their name
		Messenger: disabled Canned Response for any non-staff users
		Messenger: doubled character limit on subject field
		Messenger: added new permission to control usage of canned responses
		Planner: adjusted permissions to allow teachers to duplicate lessons belonging to other people (to reuse them)
		Planner: fixed Previous/Next Lesson links in lesson plan view to work for teachers who do not teach a given class
		Planner: added ability to tag units, in order to help build curriculum maps
		Planner: fixed lesson plan duplicate return bug, when not in current year
		Planner: improved readability of Unit Overview in lesson plan view, by removing chat section where no messages exist
		Planner: added field to mark whether unit should be included in curriculum maps and other summaries